# ember

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  REFERENCES.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
benchmarks/: __init__.py  common.py
benchmarks/graph_coloring/: baselines.py
benchmarks/maze/: baselines.py
benchmarks/sat/: baselines.py
benchmarks/sudoku/: baselines.py
configs/: config.yaml
configs/dataset/: graph_coloring.yaml  maze.yaml  sat.yaml  sudoku.yaml
configs/loss/: contrastive.yaml  hinge.yaml  info_nce.yaml  margin_ranking.yaml
configs/model/: deep_sets.yaml  gnn.yaml  mlp.yaml  transformer.yaml
configs/optimizer/: adam.yaml  lbfgs.yaml  sgd.yaml
configs/training/: default.yaml
docs/: architecture.md  benchmark_guide.md  inference_guide.md  runpod_guide.md  training_guide.md
ember/: __init__.py
ember/api/: __init__.py  main.py
ember/datasets/: __init__.py  domain.py  graph_coloring.py  maze.py  sat.py  sudoku.py
ember/inference/: __init__.py  optimize.py  solve.py  visualize.py
ember/models/: __init__.py  decoder.py  demo_bundle.py  energy_model.py
ember/training/: __init__.py  dataset.py  metrics.py  trainer.py
kona_ebm/: __init__.py
kona_ebm/api/: main.py
kona_ebm/datasets/: __init__.py  domain.py  graph_coloring.py  maze.py  sat.py  sudoku.py
kona_ebm/inference/: __init__.py  optimize.py  (+1 more)
notebooks/: quickstart.ipynb
scripts/: evaluate.py  generate_datasets.py  run_benchmarks.py  serve_api.py  train.py
tests/: test_api.py  test_benchmarks.py  test_datasets.py  test_decoder.py  test_encoder.py  test_energy_model.py  test_losses.py  test_optimizer.py  test_solve.py
(+8 files in other folders)
