[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kona-ebm"
version = "0.1.0"
description = "Research implementation of an energy-based reasoning framework for constraint-satisfaction problems, inspired by publicly discussed energy-based modeling (EBM) concepts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "João Galego" }]
keywords = ["energy-based-models", "constraint-satisfaction", "reasoning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "lightning>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "einops>=0.7",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/jgalego/energy-based-reasoning"

[tool.setuptools.packages.find]
include = ["kona_ebm*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
